fixed several remaining small problems

--- a/mmbase/trunk/src/org/mmbase/datatypes/resources/datatypes.properties
+++ b/mmbase/trunk/src/org/mmbase/datatypes/resources/datatypes.properties
@@ -15,6 +15,7 @@ double.minInclusive.error=The value ${VALUE} may not be less than the minimum va
 double.minExclusive.error=The value ${VALUE} may not be less than or equal to the maximum value ${CONSTRAINT}
 double.maxInclusive.error=The value ${VALUE} may not be more than the maximum value ${CONSTRAINT}
 double.maxExclusive.error=The value ${VALUE} may not be more than or equal to the maximum value ${CONSTRAINT}
+unknown.required.error=A value is required.
 float.required.error=A value is required.
 float.unique.error=The value ${VALUE} already exists - it should be unique.
 float.minInclusive.error=The value ${VALUE} may not be less than the minimum value ${CONSTRAINT}
@@ -51,3 +52,4 @@ xml.unique.error=The value ${VALUE} already exists - it should be unique.
 xml.minLength.error=The document must be ${CONSTRAINT} or more bytes long.
 xml.maxLength.error=The document must be no more than ${CONSTRAINT} bytes long.
 
+datetime.type.error=The value ${VALUE} cannot be casted to a Date object.
