--- a/mmbase/trunk/applications/rmmci/build.xml
+++ b/mmbase/trunk/applications/rmmci/build.xml
@@ -162,40 +162,47 @@ Build-compiler: ${build.compiler}
         <include name="org/mmbase/bridge/remote/implementation/*"/>
       </fileset>
       <fileset dir="build/rmmcitmp">
-        <include name="org/mmbase/bridge/*"/>
-        <include name="org/mmbase/bridge/util/*"/> <!-- not essential, but the idea is that you
-                                                        could use those with any bridge, so you should want them -->
-        <include name="org/mmbase/bridge/util/xml/Generator.class" /> <!--  used by rmmci bridge test cases , and generally useful-->
-        <include name="org/mmbase/storage/search/*"/> <!-- those interface are bridge -->
-
-        <!-- perhaps we need _all_ of util ? -->
-        
-        <include name="org/mmbase/util/functions/**" /> <!-- functions are bridge -->
-        <include name="org/mmbase/util/logging/**"/> 
-        <include name="org/mmbase/util/ResourceLoader*.class"/> <!-- wtf? -->
-        <include name="org/mmbase/util/ResourceWatcher*.class"/><!-- wtf? -->
-        <include name="org/mmbase/module/core/MMBaseObserver.class"/> <!-- resourcewatcher extends -->
-        <include name="org/mmbase/util/LocalizedString.class"/> <!-- returned by bridge -->
-        <include name="org/mmbase/util/Entry.class"/> <!-- used by LocalizedString -->
-        <include name="org/mmbase/util/LocalizedEntryListFactory.class"/> <!-- -->
-        <include name="org/mmbase/util/SizeMeasurable.class"/> 
-        <include name="org/mmbase/util/Casting.class"/>
-        <include name="org/mmbase/util/StringBufferWriter.class"/>
-        <include name="org/mmbase/util/Encode.class"/> <!-- general utility -->
-        <include name="org/mmbase/util/transformers/**.class"/> <!-- used by Encode -->
-        <include name="org/mmbase/util/xml/UtilReader*.class"/> <!-- used by Encode -->
-        <include name="org/mmbase/util/XMLEntityResolver"/> <!-- -->
-        <include name="org/mmbase/util/dateparser/**"/> <!-- used by Casting -->
-        <include name="org/mmbase/util/DynamicDate.class"/> <!-- used by Casting -->
-        <include name="org/mmbase/datatypes/*" /><!-- datatype classes are bridge -->
-        <include name="org/mmbase/storage/Storable.class"/> <!-- DataTypes uses .. -->
-        <include name="org/mmbase/core/util/Fields.class"/> <!-- DataTypes uses .. -->
-        <include name="org/mmbase/module/corebuilders/FieldDefs.class"/> <!-- DataTypes uses .. -->
-        <include name="org/mmbase/security/UserContext.class"/> <!-- security classes are bridge -->
+        <include name="org/mmbase/bridge/*"/>                           <!-- of course -->
+        <include name="org/mmbase/bridge/util/**"       />              <!-- not essential, but the idea is that you could use those with any bridge, so you should want them -->
+        <include name="org/mmbase/storage/search/*"/>                   <!-- those interfaces are  part of bridge -->
+        <include name="org/mmbase/datatypes/*" />                       <!-- datatype classes are bridge -->
+        <include name="org/mmbase/security/UserContext.class"/>         <!-- security classes are bridge -->
         <include name="org/mmbase/security/AuthenticationData*.class"/> <!-- security classes are bridge -->
-        <include name="org/mmbase/security/Rank.class"/><!-- security classes are bridge -->
-        <include name="org/mmbase/security/SecurityException.class"/> <!-- security classes are bridge -->
-        <include name="org/mmbase/storage/StorageException.class"/> <!-- wtf? -->
+        <include name="org/mmbase/security/Rank.class"/>                <!-- security classes are bridge -->
+        <include name="org/mmbase/security/SecurityException.class"/>   <!-- security classes are bridge -->
+
+        <include name="org/mmbase/util/functions/**" />                 <!-- functions are bridge -->
+
+        <!-- perhaps we need _all_ of util ? -->        
+        <include name="org/mmbase/util/logging/**"/>                    <!-- every class use, and it's no real burden to have it -->
+        <include name="org/mmbase/util/ResourceLoader*.class"/>         <!-- well... -->
+        <include name="org/mmbase/util/ResourceWatcher*.class"/>        <!--  -->
+        <include name="org/mmbase/util/LocalizedString.class"/>           <!-- returned by bridge -->
+        <include name="org/mmbase/util/ReplacingLocalizedString*.class"/> <!-- returned by bridge -->
+        <include name="org/mmbase/util/EncodingDetectingOutputStreamWriter.class"/> <!-- used by resourceloader -->
+        <include name="org/mmbase/util/FileWatcher*.class"/>               <!-- used by resourceloader -->
+        <include name="org/mmbase/util/Entry.class"/>                      <!-- used by LocalizedString -->
+        <include name="org/mmbase/util/LocalizedEntryListFactory.class"/>  <!-- returned by DataType -->
+        <include name="org/mmbase/util/SizeMeasurable.class"/>             <!-- implemented by several class -->
+        <include name="org/mmbase/util/Casting*.class"/>                   <!-- widely used -->
+        <include name="org/mmbase/util/StringBufferWriter.class"/>         <!-- used by Casting -->
+        <include name="org/mmbase/util/Encode.class"/>                     <!-- general utility -->
+        <include name="org/mmbase/util/transformers/**.class"/>            <!-- used by Encode -->
+        <include name="org/mmbase/util/xml/**"/>
+        <include name="org/mmbase/util/XMLEntityResolver*.class"/>          <!-- -->
+        <include name="org/mmbase/util/DynamicDate.class"/>                <!-- used by Casting -->
+        <include name="org/mmbase/util/dateparser/**"/>                    <!-- used by Casting -->
+
+
+        <include name="org/mmbase/storage/Storable.class"/>                <!-- DataTypes uses .. -->
+        <include name="org/mmbase/storage/StorageException.class"/>        <!--  -->
+
+        <include name="org/mmbase/core/util/Fields.class"/>                <!-- DataTypes uses .. -->
+        <include name="org/mmbase/core/*.class"/>                          <!-- DataTypes uses .. -->
+
+        <include name="org/mmbase/module/core/MMBaseObserver.class"/>      <!-- resourcewatcher extends -->
+        <include name="org/mmbase/module/corebuilders/FieldDefs.class"/>   <!-- DataTypes uses .. -->
+
 
         <!-- external interfaces used by bridge, but not always present client side, so provide them. -->
         <include name="org/w3c/dom/Document.class"/>
