--- a/mmbase/trunk/tests/build.xml
+++ b/mmbase/trunk/tests/build.xml
@@ -114,6 +114,7 @@
         <pathelement location="${tests.source.dir}/fixme" /> <!-- dir must be empty -->
         <pathelement location="${tests.lib}/junit.jar" />
         <pathelement location="${tests.lib}/xercesImpl.jar" /> <!-- should not need this, Document must be somehow serialized as String, and reparsed, probably-->
+        <pathelement location="${tests.lib}/xml-apis.jar" /> <!-- not needed in java 1.5 -->
         <pathelement location="${mmbasetest.jar}" />
         <pathelement location="${tests.lib}/mmbase-rmmci.jar" />
       </classpath>
