tested enumeration, needed some changes to make it work. 'enumeration' is a kind of constraint too, so it has attributes 'fixed' and 'enforce', there stored actual values in subtags, perhaps we need a generic 'requirement' tag like in xsd.

--- a/mmbase/trunk/src/org/mmbase/datatypes/resources/datatypes.properties
+++ b/mmbase/trunk/src/org/mmbase/datatypes/resources/datatypes.properties
@@ -53,3 +53,4 @@ xml.minLength.error=The document must be ${CONSTRAINT} or more bytes long.
 xml.maxLength.error=The document must be no more than ${CONSTRAINT} bytes long.
 
 datetime.type.error=The value ${VALUE} cannot be casted to a Date object.
+unknown.enumeration.error=The value ${VALUE} is not an enumerationvalue of ${CONSTRAINT}
