--- a/mmbase/branches/MMBase-1_8/build.xml
+++ b/mmbase/branches/MMBase-1_8/build.xml
@@ -2,7 +2,7 @@
 
 
 MMBase Build File
-$Id: build.xml,v 1.147.2.1 2006-10-02 15:45:17 michiel Exp $
+$Id: build.xml,v 1.147.2.2 2006-10-03 21:11:43 michiel Exp $
 =================
 
 This build file can be used to build the following from CVS or from the source
@@ -719,6 +719,8 @@ Build-compiler: ${build.compiler}
               <filename name="mmbase/admin/**" />
               <filename name="mmbase/style/**" />
               <filename name="mmbase/errorpages/**" />
+              <filename name="mmbase/index.jsp" />
+              <filename name="mmbase/mpl-1.0.jsp" />
               <filename name="index.jsp" />
             </or>
           </and>
