--- a/mmbase/trunk/applications/cloudcontext/build.xml
+++ b/mmbase/trunk/applications/cloudcontext/build.xml
@@ -1,8 +1,4 @@
 <?xml version="1.0"?>
-<!DOCTYPE project 
- [ <!ENTITY base     SYSTEM "../buildbase.xml" > ]
->
-
 <project name="cloudcontext" default="jar" basedir=".">
   <property name="project.name"      value="cloudcontextsecurity" />
   <property name="project.package"   value="org/mmbase/security/implementation/cloudcontext" />
@@ -10,5 +6,5 @@
 	<!-- property name="project.extra.path" location="../classsecurity/build/mmbase-classsecurity.jar" /-->
   <property name="project.config.dir.includes"   value="security/**" />
   <property name="project.config.jar.includes"   value="**" />
-  &base;
+  <import file="../buildbase-include.xml" />
 </project>
