--- a/mmbase/trunk/speeltuin/andre/friendlylink/build.xml
+++ b/mmbase/trunk/speeltuin/andre/friendlylink/build.xml
@@ -1,68 +1,13 @@
 <?xml version="1.0"?>
 <project name="FriendlyLink" default="jar" basedir=".">
-  
-  <!-- ============ Global properties section ============ -->
-  <property name="project.name"    value="friendlylink" />
-  <property name="project.package" value="org/mmbase/applications/friendlylink" />
+  <property name="project.name"     value="friendlylink" />
+  <property name="project.package"   value="org/mmbase/applications/friendlylink" />
+  <!-- <property name="project.target.templates.dir"   value="../mmexamples" /> -->
 
-  <!-- Use "ant -Dproperties.file=..." to use a different property file -->
-  <property name="properties.file" value="${basedir}/build.properties" />
-  <!-- Read customized values if available -->
-  <property file="${properties.file}" />
-  <!-- Default values for properties that can be customized -->
-
-  <property name="version" value="0.9" />
-  <property name="debug" value="on" />
-  <property name="fullname" value="${project.name}-${version}" />
-  <property name="jarfile" value="mmbase-${fullname}.jar" />
-
-  <property name="src" location="src" />
-  
-  <property name="lib" location="${lib.dir}" />  
-  <property name="mmbase.jar" location="${mmbase.jar}" />
-  <property name="mmbase-oscache.jar" location="${mmbase-oscache.jar}" />
-  
-  <property name="build" location="build" />
-  <property name="classes" location="${build}/classes" />
-<!-- 
-  <property name="dist" location="dist" />
- -->
-    
-  <path id="project.class.path">
-    <fileset dir="${lib}">
-      <include name="**/*.jar" />
-    </fileset>
-    <pathelement location="${mmbase.jar}" />
-    <pathelement location="${mmbase-oscache.jar}" />
-  </path>
-
-
-
-
-  <!-- ============ Target section ============ -->
-  <target name="init" description="Prepare package for compilation">
-    <mkdir dir="${classes}" />
-  </target>
-    
-  <target name="compile" depends="init" description="Compile from sources">
-    <echo message="java version: ${ant.java.version}" />
-    <!-- Compile the java code from ${src} into ${build} -->
-    <javac srcdir="${src}" 
-           destdir="${classes}" 
-           classpathref="project.class.path" 
-           debug="${debug}" />
-
-  </target>
-
-  <target name="jar" depends="compile" description="Package up classes">
-    <jar jarfile="${build}/${jarfile}" basedir="${classes}" />
-  </target>   
-
-  <target name="clean" description="clean up" >
-    <delete dir="${build}" />
-  </target>
-
-
-
+  <property name="project.jars.includes" value="oscache-cache/mmbase-oscache.jar" />
+  <import file="../buildbase-include.xml" />
 </project>
+
+
+
 
