added 'links' component

--- a/contributions/didactor2/build.properties
+++ b/contributions/didactor2/build.properties
@@ -1,7 +1,10 @@
 build.dir = ${basedir}/build
-components = core,versioning,education,utils,aselect,portalpages,cmshelp,faq,news,projectgroup,search,address,competence,pdf,redspider,sources,agenda,isbo,pop,register,drm,metadata,report,chat,mmbob,portfolio,rmmci,workspace,virtualclassroom,cms,email,progress,scorm,reports,assessment,proactivemail
+components = core,versioning,education,utils,aselect,portalpages,cmshelp,faq,news,projectgroup,search,address,competence,pdf,redspider,sources,agenda,isbo,pop,register,drm,metadata,report,chat,mmbob,portfolio,rmmci,workspace,virtualclassroom,cms,email,progress,scorm,reports,assessment,proactivemail,links
+#components = core
+#components=core,address,links,email
 providers =
 war.name=didactor
 multiple.wars =
 component.netg.courses=
+defaultexcludes=no
 
